spring-cloud demo

--- a/eureka-server-peer1/src/main/resources/application.yml
+++ b/eureka-server-peer1/src/main/resources/application.yml
@@ -1,1 +1,14 @@
 
+
+eureka:
+  instance:
+    appname: peer1
+  client:
+    service-url:
+      defaultZone: http://peer2:8092/eureka
+spring:
+  application:
+    name: eureka-server1
+
+server:
+  port: 8091
