--- a/service-ribbon/src/main/resources/application.yml
+++ b/service-ribbon/src/main/resources/application.yml
@@ -8,3 +8,11 @@ eureka:
 
 server:
   port: 8081
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+      cors:
+        allowed-methods: "*"
+        allowed-origins: "*"
